Changes to support using base/feature_list.h from gin/.

Since gin/ (V8) is used from a number of different processes and
test harnesses, this required updating them to ensure they initialize
a base::FeatureList instance (which is required before querying the
API to ensure code doesn't incorrectly query the API too early).

Additionally, for test_suite.cc, the FeatureList initialization needed
to happen earlier - since some sub-classes of it initialize gin from
their Initialize() functions. The initialization was also switched to
use FeatureList::InitializeInstance() since for some test suites,
a FeatureList would already exist.

BUG=599165,563705

Review URL: https://codereview.chromium.org/1848523002

Cr-Commit-Position: refs/heads/master@{#385053}

Former-commit-id: e6be55d0de165a41e25a5bd4d41181f562caf3f3