content/utility/utility_main.cc
@@ -4,6 +4,7 @@
 
 #include "base/command_line.h"
 #include "base/debug/leak_annotations.h"
+#include "base/feature_list.h"
 #include "base/message_loop/message_loop.h"
 #include "base/threading/platform_thread.h"
 #include "base/timer/hi_res_timer_manager.h"
@@ -35,6 +36,12 @@ int UtilityMain(const MainFunctionParams& parameters) {
   if (parameters.zygote_child)
     LinuxSandbox::InitializeSandbox();
 #endif
+
+  scoped_ptr<base::FeatureList> feature_list(new base::FeatureList);
+  feature_list->InitializeFromCommandLine(
+      parameters.command_line.GetSwitchValueASCII(switches::kEnableFeatures),
+      parameters.command_line.GetSwitchValueASCII(switches::kDisableFeatures));
+  base::FeatureList::SetInstance(std::move(feature_list));
 
   ChildProcess utility_process;
   utility_process.set_main_thread(new UtilityThreadImpl());
